225: Fix minor and major code smells